--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,12 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.google.firebase:firebase-messaging:11.4.2'
+    compile 'com.google.firebase:firebase-messaging:11.6.0'
     compile 'com.android.support:cardview-v7:26.1.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.github.deano2390:MaterialShowcaseView:1.2.0'
     testCompile 'junit:junit:4.12'
 }
-
-
-
 
 
 apply plugin: 'com.google.gms.google-services'
