--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     defaultConfig {
         applicationId "com.vies.notifikacijevesti"
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
+       
 
     }
     buildTypes {
@@ -23,17 +24,17 @@ dependencies {
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'de.hdodenhof:circleimageview:1.2.1'
-    compile 'com.android.support:recyclerview-v7:26.1.0'
-    compile 'com.google.firebase:firebase-messaging:11.6.2'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.github.deano2390:MaterialShowcaseView:1.2.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'de.hdodenhof:circleimageview:1.2.1'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.google.firebase:firebase-messaging:12.0.1'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.github.deano2390:MaterialShowcaseView:1.2.0'
+    testImplementation 'junit:junit:4.12'
 }
 
 
