--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,7 +65,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.vies.notifikacijevesti.MainActivity" />
         </activity>
-        <activity android:name=".NotificationClickReceiver" />
+        <!-- Theme.NoDisplay to be tested -->
+        <activity
+            android:name=".NotificationClickReceiver"
+            android:theme="@android:style/Theme.NoDisplay">
+        </activity>
+
         <activity
             android:name=".AboutActivity"
             android:label="@string/title_activity_about"
