Added Chrome Custom Tabs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,11 @@
         <!-- Theme.NoDisplay to be tested -->
         <activity
             android:name=".NotificationClickReceiver"
-            android:theme="@android:style/Theme.NoDisplay">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.vies.notifikacijevesti.MainActivity" />
         </activity>
 
         <activity
