--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,18 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
 
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-messaging:17.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
+
+    implementation 'com.android.support:customtabs:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:design:26.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.google.firebase:firebase-messaging:15.0.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.github.deano2390:MaterialShowcaseView:1.2.0'
-    implementation 'com.google.firebase:firebase-database:15.0.0'
     implementation 'com.jaredrummler:material-spinner:1.2.5'
     testImplementation 'junit:junit:4.12'
 }
